# polyxios

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: precommit_update.yml  release.yml  test.yml
.spin/: cmds.py
docs/: contributing.rst  development.rst  installation.rst  usage.rst
examples/: read_multiblock_vtp.py  render_fetched_model.py  visualize_mesh.py  visualize_vtk.py
polyxios/: __init__.py  _backend.py  _core.pyx  _core_fallback.py  _element_types.py  _registry.py  _types.py  exceptions.py  fetcher.py  meson.build  transforms.py  validate.py
polyxios/codecs/: _abaqus.py  _avs.py  _mesh.py  _meshb.py  _obj.py  _ply.py  _splat.py  _stl.py  _vti.py  _vtk.py  _vtk_xml.py  _vtp.py  _vtr.py  _vts.py  _vtu.py  meson.build
tests/: test_validate_header.py
tests/codecs/: test_abaqus.py  test_avs.py  test_mesh.py  test_meshb.py  test_obj.py  test_ply.py  test_splat.py  test_stl.py  test_vti.py  test_vtk.py  test_vtp.py  test_vts.py  test_vtu.py
tools/: commit-msg.py  github_stats.py
